perfin_frontend.tf
variable "aws_ami_id" {}

resource "aws_key_pair" "ansible" {
    key_name   = "ansible-key"
    public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAAEAQD1nfeI0p78aipU2EVsyEWyvwEgOvdnKpToPrv/WGSQHQKvWW8YcEPwcee373oqh6Fm+nBgg43QPbCYDMqcivwb8TNB9+IYC3xzG+gBFt8pYVQPZR/+7nhgDol7h4Ds3bGdgxR0AcrjNrKYoMaK7nniKvTRe8ykV2fKCmXsCOE3E4tD37iRNe9fApclMp4EewsWxWB7sArXQWWknOJ8M4xz6JsfKz1aSfHrqMQwdlfmezE+H7We7aBV5zWUaIg/OPtUpnZzegH5WkoI0zuJ+HySMdd60dKi2ysVewtjwPsZ4hWAyVaKEOODLG33epFnH4tlbGHRd7J/Gf9GtZJyXitF+A2FmUrV3nG+G/CmmZozq2K3psz6RGVcmy9TQrbV63DOfzp+wt2N1jUdnL6z6Kp73AE1LTGw6+tYzbJ07bud8TfoeixTB7D6qmXG4m [...]

    tags = {
        "Terraform" = "true"
    }
}

resource "aws_default_vpc" "default" {}

# EC2 perfin frontend
resource "aws_instance" "frontend" {
    ami           = var.AMI_ID
    instance_type = "t2.micro"
    key_name      = aws_key_pair.ansible.key_name

    vpc_security_group_ids = [
        aws_security_group.frontend.id
    ]

    tags = {
        "Terraform" = "true"
    }

    lifecycle {
      create_before_destroy = true
    }
}

# Elastic IP
resource "aws_eip" "frontend" {
    instance = aws_instance.frontend.id

    tags = {
        "Terraform" = "true"
    }
}
