prod_perfin_backend.tf
resource "aws_key_pair" "ansible" {
  key_name   = "ansible-key"
  public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAAEAQD1nfeI0p78aipU2EVsyEWyvwEgOvdnKpToPrv/WGSQHQKvWW8YcEPwcee373oqh6Fm+nBgg43QPbCYDMqcivwb8TNB9+IYC3xzG+gBFt8pYVQPZR/+7nhgDol7h4Ds3bGdgxR0AcrjNrKYoMaK7nniKvTRe8ykV2fKCmXsCOE3E4tD37iRNe9fApclMp4EewsWxWB7sArXQWWknOJ8M4xz6JsfKz1aSfHrqMQwdlfmezE+H7We7aBV5zWUaIg/OPtUpnZzegH5WkoI0zuJ+HySMdd60dKi2ysVewtjwPsZ4hWAyVaKEOODLG33epFnH4tlbGHRd7J/Gf9GtZJyXitF+A2FmUrV3nG+G/CmmZozq2K3psz6RGVcmy9TQrbV63DOfzp+wt2N1jUdnL6z6Kp73AE1LTGw6+tYzbJ07bud8TfoeixTB7D6qmXG4m2z [...]
}

# EC2 perfin backend
resource "aws_instance" "perfin-backend" {
    count = 1

    ami           = "perfin-backend-v1"
    instance_type = "t2.micro"
    key_name      = "ansible"

    lifecycle {
      create_before_destroy = true
    }
}

# Elastic IP
resource "aws_eip" "perfin-backend" {
    instance = "perfin-backend"
    vpc      = true
}
